Moved the execute-api:ManageConnections to websocket setup